--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 header {
     background-color: navy;
     padding: 1rem;
-    position: fixed;
+    position: static;
     top: 0;
 }
 
@@ -83,7 +83,7 @@ footer {
     background-color: #f8f9fa;
     padding: 1rem;
     text-align: center;
-    position: fixed;
+    position: static;
     bottom: 0;
     width: 100%;
 }
